# auto_insert_data

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
